production/whoami/ingressroute_tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`whoami.elizondo.cloud`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    secretName: origin-cert
